--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   emoji_picker_flutter: ^4.3.0
   intl: ^0.20.2
   file_picker: ^9.0.2
+  permission_handler: ^11.4.0
+  device_info_plus: ^11.3.3
 
 dev_dependencies:
   flutter_test:
